[gd_scene load_steps=13 format=3 uid="uid://cywgbm3h0wiom"]

[ext_resource type="PackedScene" uid="uid://dsbomouesoku3" path="res://Scenes/maps/map_1.tscn" id="1_wtvrr"]
[ext_resource type="Script" path="res://Scenes/game_scene.gd" id="1_ye6d8"]
[ext_resource type="Texture2D" uid="uid://dig0fh237dj63" path="res://Ressources/ui/button.png" id="2_8k3re"]
[ext_resource type="Script" path="res://Scenes/HUD.gd" id="3_oht18"]
[ext_resource type="Script" path="res://Scenes/menus/NewTurrentButton.gd" id="3_tew86"]
[ext_resource type="PackedScene" uid="uid://cfcratgp0ps7q" path="res://Scenes/guns/gun_1.tscn" id="6_1vwm3"]
[ext_resource type="PackedScene" uid="uid://c7x1w8yx0nv8x" path="res://Scenes/guns/gun_2.tscn" id="7_ysgsm"]
[ext_resource type="Script" path="res://Scenes/menus/ButtonEvent.gd" id="8_67d3k"]
[ext_resource type="Texture2D" uid="uid://c5sviyemduu3" path="res://Ressources/ui/play.png" id="9_xklq4"]
[ext_resource type="Texture2D" uid="uid://c3h3ilymmh2vq" path="res://Ressources/ui/pause.png" id="10_vmhhc"]
[ext_resource type="Texture2D" uid="uid://u8olae15os7n" path="res://Ressources/ui/fast_forward.png" id="11_kq53j"]
[ext_resource type="Texture2D" uid="uid://dtuh8iuldgj84" path="res://Ressources/ui/fast_forward_enable.png" id="12_qgu58"]

[node name="GameScene" type="Node"]
script = ExtResource("1_ye6d8")

[node name="Map1" parent="." instance=ExtResource("1_wtvrr")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
process_mode = 3
z_index = 999
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_oht18")

[node name="TowerPreviewControl" type="Control" parent="UI/HUD"]
z_index = 900
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="marging" type="MarginContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="turrets_ui" type="VBoxContainer" parent="UI/HUD/marging"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="BuyBaseTurret" type="TextureButton" parent="UI/HUD/marging/turrets_ui"]
layout_mode = 2
texture_normal = ExtResource("2_8k3re")
script = ExtResource("3_tew86")
turret_type = ExtResource("6_1vwm3")

[node name="Label" type="Label" parent="UI/HUD/marging/turrets_ui/BuyBaseTurret"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Base"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyMissileTurret" type="TextureButton" parent="UI/HUD/marging/turrets_ui"]
layout_mode = 2
texture_normal = ExtResource("2_8k3re")
script = ExtResource("3_tew86")
turret_type = ExtResource("7_ysgsm")

[node name="Label" type="Label" parent="UI/HUD/marging/turrets_ui/BuyMissileTurret"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Missile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/marging"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 10
alignment = 2

[node name="Nextwave" type="TextureButton" parent="UI/HUD/marging/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2_8k3re")
script = ExtResource("8_67d3k")
event = "next_wave"

[node name="Label" type="Label" parent="UI/HUD/marging/VBoxContainer/Nextwave"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "NEXT WAVE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/marging/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="pause" type="TextureButton" parent="UI/HUD/marging/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
keep_pressed_outside = true
texture_normal = ExtResource("10_vmhhc")
texture_pressed = ExtResource("9_xklq4")
script = ExtResource("8_67d3k")
event = "pause_game"
event_release = "play_game"

[node name="fastForward" type="TextureButton" parent="UI/HUD/marging/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
texture_normal = ExtResource("11_kq53j")
texture_pressed = ExtResource("12_qgu58")
script = ExtResource("8_67d3k")
event = "fast_forward"
event_release = "fast_forward_cancel"

[connection signal="ui_control_event" from="UI/HUD" to="." method="_on_hud_ui_control_event"]
[connection signal="pressed_event" from="UI/HUD/marging/turrets_ui/BuyBaseTurret" to="UI/HUD" method="on_ui_control_event"]
[connection signal="pressed_event" from="UI/HUD/marging/turrets_ui/BuyMissileTurret" to="UI/HUD" method="on_ui_control_event"]
[connection signal="pressed_event" from="UI/HUD/marging/VBoxContainer/Nextwave" to="UI/HUD" method="on_ui_control_event"]
[connection signal="pressed_event" from="UI/HUD/marging/VBoxContainer/HBoxContainer/pause" to="UI/HUD" method="on_ui_control_event"]
[connection signal="pressed_event" from="UI/HUD/marging/VBoxContainer/HBoxContainer/fastForward" to="UI/HUD" method="on_ui_control_event"]
